# KSAmcp

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  fastapi_app.py  ksa-mcp.sh  pyproject.toml  server.py  sources.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add-source.yml
.github/workflows/: ci.yml
contrib/entities/: README.md  agricultural-development-fund 2.yaml  al-ahsa-development-authority.yaml  al-baha-municipality.yaml  al-baha-university.yaml  al-jouf-municipality.yaml  alahsa-health-cluster.yaml  alahsa-municipality.yaml  alimony-fund 2.yaml  almadinah-almunawarah-development-authority 2.yaml  amer-test.yaml  architecture-and-design-commission.yaml  armed-forces-medical-services.yaml  aseer-development-authority 2.yaml  aseer-municipality.yaml  associations-support-fund 2.yaml  authority-for-persons-with-disabilities.yaml  bankruptcy-commission.yaml  board-of-grievances.yaml  bureau-of-experts-at-the-council-of-ministers.yaml  (+341 more)
docs/: README.md  architecture.md  entity-registry.md  security.md  sources.md
ksa_opendata/: __init__.py  config.py  errors.py  logging.py  registry.py
reports/: .gitkeep  chatgpt_mcp_setup.json  fetch_validation_report.json  fetch_validation_report.md  govsa_entity_registry.json  govsa_entity_registry.md  govsa_ministries_registry.json  smoke_tool_report.json  smoke_tool_report.md
scripts/: generate_entity_registry.py  generate_ministry_inventory.py
tests/: conftest.py
(+50 files in other folders)
